Remove blocking call from setupAppend. (#7262)
Remove blocking call from setupAppend. Currently we are using join() in createIndexSegmentIfNotExists method.

Signed-off-by: Tom Kaitchuck <tom.kaitchuck@emc.com>

---------

Signed-off-by: Bhupender-Y <Bhupender.Y@dell.com>
Signed-off-by: Tom Kaitchuck <tom.kaitchuck@emc.com>
Co-authored-by: Tom Kaitchuck <tom.kaitchuck@emc.com>